# rust-iflytek-sys

./: Cargo.toml  LICENSE  build.rs
linux/include/: wrapper.h
src/: iflytek.rs
